@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - rse: add support for QNX by adjusting to its 3-parameter based makedev(2)
     - jbj: resurrect rpm.spec.in.
     - jbj: fix: permit %{lua:...} to recurse.
     - rse: allow to compile without <langinfo.h> and its nl_langinfo(3)
